styled text content, updated index for style changes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Walt Disney World 2021</title>
+
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Mouse+Memoirs&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <img class="castle" src="images/castle.png" alt="Disney Castle" title="Walt Disney World Castle" />
