--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
       <img class="red" src="images/red.png" alt="red firework" title="firework" />
     </div>
 
-
-
     <h1>2021 Walt Disney World Vacation</h1>
 
     <p>Who's excited for our trip to Disney World? This website will help keep track of our plans for the week</p>
 
+    <img src="images/ears.jpg" alt="Mickey Ears" height="40" class="ears">
     <h2>Park Hours</h2>
 
     <p>Park Hours are available on the <a href="https://disneyworld.disney.go.com/calendars/five-day/2021-05-05/" target="_blank">Disney World website</a>. <span class="notice">Note: Park Hours are subject to change prior to the trip!</span></p>
@@ -56,6 +55,8 @@
       </tr>
     </table>
 
+
+    <img src="images/ears.jpg" alt="Mickey Ears" height="40" class="ears">
     <h2>Must-See!</h2>
 
     <p>Make sure we don't miss the following attractions!</p>
