moved text into container div to style animation

--- a/index.html
+++ b/index.html
@@ -18,79 +18,82 @@
       <img class="red" src="images/red.png" alt="red firework" title="firework" />
     </div>
 
-    <h1>2021 Walt Disney World Vacation</h1>
+    <div class="container">
+      <h1>2021 Walt Disney World Vacation</h1>
 
-    <p>Who's excited for our trip to Disney World? This website will help keep track of our plans for the week</p>
+      <p>Who's excited for our trip to Disney World? This website will help keep track of our plans for the week</p>
 
-    <img src="images/ears.jpg" alt="Mickey Ears" height="40" class="ears">
-    <h2>Park Hours</h2>
+      <img src="images/ears.jpg" alt="Mickey Ears" height="40" class="ears">
+      <h2>Park Hours</h2>
 
-    <p>Park Hours are available on the <a href="https://disneyworld.disney.go.com/calendars/five-day/2021-05-05/" target="_blank">Disney World website</a>. <span class="notice">Note: Park Hours are subject to change prior to the trip!</span></p>
+      <p>Park Hours are available on the <a href="https://disneyworld.disney.go.com/calendars/five-day/2021-05-05/" target="_blank">Disney World website</a>. <span class="notice">Note: Park Hours are subject to change prior to the trip!</span></p>
 
-    <table>
-      <tr>
-        <th>Park</th>
-        <th>Date</th>
-        <th>Hours</th>
-      </tr>
-      <tr>
-        <td class="park">Magic Kingdom</td>
-        <td>May 6</td>
-        <td>9:00 AM to 6:00 PM</td>
-      </tr>
-      <tr>
-        <td class="park">Hollywood Studios</td>
-        <td>May 7</td>
-        <td>10:00 AM to 7:00 PM</td>
-      </tr>
-      <tr>
-        <td class="park">EPCOT</td>
-        <td>May 8</td>
-        <td>11:00 AM to 7:00 PM</td>
-      </tr>
-      <tr>
-        <td class="park">Animal Kingdom</td>
-        <td>May 9</td>
-        <td>9:00 AM to 5:00 PM</td>
-      </tr>
-    </table>
+      <table>
+        <tr>
+          <th>Park</th>
+          <th>Date</th>
+          <th>Hours</th>
+        </tr>
+        <tr>
+          <td class="park">Magic Kingdom</td>
+          <td>May 6</td>
+          <td>9:00 AM to 6:00 PM</td>
+        </tr>
+        <tr>
+          <td class="park">Hollywood Studios</td>
+          <td>May 7</td>
+          <td>10:00 AM to 7:00 PM</td>
+        </tr>
+        <tr>
+          <td class="park">EPCOT</td>
+          <td>May 8</td>
+          <td>11:00 AM to 7:00 PM</td>
+        </tr>
+        <tr>
+          <td class="park">Animal Kingdom</td>
+          <td>May 9</td>
+          <td>9:00 AM to 5:00 PM</td>
+        </tr>
+      </table>
 
 
-    <img src="images/ears.jpg" alt="Mickey Ears" height="40" class="ears">
-    <h2>Must-See!</h2>
+      <img src="images/ears.jpg" alt="Mickey Ears" height="40" class="ears">
+      <h2>Must-See!</h2>
 
-    <p>Make sure we don't miss the following attractions!</p>
+      <p>Make sure we don't miss the following attractions!</p>
 
-    <ul>
-      <li>Magic Kingdom
-        <ul>
-          <li>Space Mountain</li>
-          <li>Splash Mountain</li>
-          <li>Big Thunder Mountain</li>
-        </ul>
-      </li>
-      <li>Hollywood Studios
-        <ul>
-          <li>Toy Story Land</li>
-          <li><span class="italic">Star Wars:</span> Galaxy's Edge</li>
-          <li>Micky and Minnie's Runaway Railway</li>
-        </ul>
-      </li>
-      <li>EPCOT
-        <ul>
-          <li>Test Track</li>
-          <li>Soarin' Around the World</li>
-          <li>Drinks from each pavillion!</li>
-        </ul>
-      </li>
-      <li>Animal Kingdom
-        <ul>
-          <li>Kilimanjaro Safaris</li>
-          <li>Pandora - The World of Avatar</li>
-          <li>Avatar Flight of Passage</li>
-        </ul>
-      </li>
-    </ul>
+      <ul>
+        <li>Magic Kingdom
+          <ul>
+            <li>Space Mountain</li>
+            <li>Splash Mountain</li>
+            <li>Big Thunder Mountain</li>
+          </ul>
+        </li>
+        <li>Hollywood Studios
+          <ul>
+            <li>Toy Story Land</li>
+            <li><span class="italic">Star Wars:</span> Galaxy's Edge</li>
+            <li>Micky and Minnie's Runaway Railway</li>
+          </ul>
+        </li>
+        <li>EPCOT
+          <ul>
+            <li>Test Track</li>
+            <li>Soarin' Around the World</li>
+            <li>Drinks from each pavillion!</li>
+          </ul>
+        </li>
+        <li>Animal Kingdom
+          <ul>
+            <li>Kilimanjaro Safaris</li>
+            <li>Pandora - The World of Avatar</li>
+            <li>Avatar Flight of Passage</li>
+          </ul>
+        </li>
+      </ul>
+
+    </div>
 
   </body>
 </html>
