put animation images in div

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
   </head>
   <body>
-    <img class="castle" src="images/castle.png" alt="Disney Castle" title="Walt Disney World Castle" />
+    <div class="entrance">
+      <img class="castle" src="images/castle.png" alt="Disney Castle" title="Walt Disney World Castle" />
 
-    <div class="fireworks">
-      <img class="purple" src="images/purple.png" alt="purple firework" title="firework" />
-      <img class="red" src="images/red.png" alt="red firework" title="firework" />
+      <div class="fireworks">
+        <img class="purple" src="images/purple.png" alt="purple firework" title="firework" />
+        <img class="red" src="images/red.png" alt="red firework" title="firework" />
+      </div>
     </div>
 
     <div class="container">
