added yellow firework

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="fireworks">
         <img class="purple" src="images/purple.png" alt="purple firework" title="firework" />
         <img class="red" src="images/red.png" alt="red firework" title="firework" />
+        <img class="yellow" src="images/yellow.png" alt="yellow firework" title="firework" />
       </div>
     </div>
 
