added background and WDW logo

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
         </li>
       </ul>
 
+      <img src="images/wdw.png" alt="Walt Disney World logo" class="logo" width="300px">
+
     </div>
 
   </body>
