finishing touches on CSS and index (header size, table color, editoral)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <h1>2021 Walt Disney World Vacation</h1>
 
-      <p>Who's excited for our trip to Disney World? This website will help keep track of our plans for the week</p>
+      <p>Who's excited for our trip to Disney World? This website will help keep track of our plans for the week.</p>
 
       <img src="images/ears.png" alt="Mickey Ears" height="40" class="ears">
       <h2>Park Hours</h2>
