removed typo from index.html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </li>
       </ul>
 
-      <img src="images/wdw.png" alt="Walt Disney World logo" class="logo" width="300px">
+      <img src="images/wdw.png" alt="Walt Disney World logo" class="logo" width="300">
 
     </div>
 
